--- a/use/client/partials/wumpus/instance.html
+++ b/use/client/partials/wumpus/instance.html
@@ -4,8 +4,8 @@
      data-ng-class="{'alert-success': agent.win, 'alert-danger': !agent.win}"></div>
 <div class="game-container">
     <span data-ng-repeat="room in rooms" data-wumpus-room="room" data-ng-show="room.visible"></span>
-    <span class="wumpus" data-wumpus-agent="wumpus" data-ng-if="wumpus && wumpus.alive"></span>
-    <span data-wumpus-agent="agent" data-ng-if="agent.alive && !agent.win"></span>
+    <span class="wumpus" data-wumpus-agent="wumpus" data-ng-show="showWumpus()"></span>
+    <span data-wumpus-agent="agent" data-ng-show="agent.alive && !agent.win"></span>
 </div>
 
 <!-- needs to be ng-show (not ng-if) so we can find it when the page loads -->
