--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -12,7 +12,9 @@
                 <label><input type="radio" value="deterministic" data-ng-model="config.game.chance" disabled>Deterministic</label>
                 <label><input type="radio" value="stochastic" data-ng-model="config.game.chance" disabled>Stochastic</label>
             </div>
-            <div class="col-sm-7 form-control-static">does my wheel slip because the dirt isn't solid (ice physics)</div>
+            <div class="col-sm-7 form-control-static">
+                does my wheel slip because the dirt isn't solid (ice physics)
+            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Grain</label>
@@ -21,7 +23,9 @@
                 <label><input type="radio" value="discrete" data-ng-model="config.game.grain">Discrete</label>
                 <label><input type="radio" value="continuous" data-ng-model="config.game.grain">Continuous</label>
             </div>
-            <div class="col-sm-7 form-control-static">digital vs analog; move in chunks vs move via velocity (w/ noop)</div>
+            <div class="col-sm-7 form-control-static">
+                digital vs analog; move in chunks vs move via velocity (w/ noop)
+            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Observable</label>
@@ -30,7 +34,9 @@
                 <label><input type="radio" value="fully" data-ng-model="config.game.observable">Fully</label>
                 <label><input type="radio" value="partially" data-ng-model="config.game.observable">Partially</label>
             </div>
-            <div class="col-sm-7 form-control-static">fog of war; you remember where you were with some probability</div>
+            <div class="col-sm-7 form-control-static">
+                fog of war; you remember where you were with some probability
+            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Timing</label>
@@ -39,7 +45,9 @@
                 <label><input type="radio" value="static" data-ng-model="config.game.timing">Static</label>
                 <label><input type="radio" value="dynamic" data-ng-model="config.game.timing">Dynamic</label>
             </div>
-            <div class="col-sm-7 form-control-static">the world moves without you; or only updates when you tell it to</div>
+            <div class="col-sm-7 form-control-static">
+                the world moves without you; or only updates when you tell it to
+            </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">A Priori</label>
@@ -48,9 +56,8 @@
                 <label><input type="radio" value="known" data-ng-model="config.game.apriori" disabled>Known</label>
                 <label><input type="radio" value="unknown" data-ng-model="config.game.apriori" disabled>Unknown</label>
             </div>
-            <div class="col-sm-7 form-control-static">how much do you know about the world; you need to learn everything about HOW the
-                world
-                works
+            <div class="col-sm-7 form-control-static">
+                how much do you know about the world before you start?
             </div>
         </div>
         <div class="form-group">
@@ -60,7 +67,8 @@
                 <label><input type="radio" value="single" data-ng-model="config.game.agents">Single</label>
                 <label><input type="radio" value="multi" data-ng-model="config.game.agents">Multi</label>
             </div>
-            <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others (is there a wumpus?)
+            <div class="col-sm-7 form-control-static">
+                are you alone, or do you have to battle/coop with others (is there a wumpus?)
             </div>
         </div>
         <div class="form-group" data-ng-disabled="true">
@@ -70,8 +78,8 @@
                 <label><input type="radio" disabled><strike>Episodic</strike></label>
                 <label><input type="radio" checked disabled>Sequential</label>
             </div>
-            <div class="col-sm-7 form-control-static">are decision related? sorting marbles vs solving a maze (wumpus is sequential by
-                definition)
+            <div class="col-sm-7 form-control-static">
+                are decision related? sorting marbles vs solving a maze (a maze is sequential by definition)
             </div>
         </div>
         <div class="form-group">
@@ -80,7 +88,9 @@
             <div class="col-sm-3">
                 <input class="form-control" type="number" min="4" data-ng-model="config.game.roomCount"/>
             </div>
-            <div class="col-sm-7 form-control-static"></div>
+            <div class="col-sm-7 form-control-static">
+                how many rooms are in the cave? (defaults to a minimum of 4)
+            </div>
         </div>
 
     </div>
