--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -9,8 +9,8 @@
             <label class="col-sm-2 control-label">Chance</label>
 
             <div class="col-sm-3 radio form-control-static">
-                <label><input type="radio" value="deterministic" data-ng-model="config.game.chance" disabled>Deterministic</label>
-                <label><input type="radio" value="stochastic" data-ng-model="config.game.chance" disabled>Stochastic</label>
+                <label><input type="radio" value="deterministic" data-ng-model="config.game.chance">Deterministic</label>
+                <label><input type="radio" value="stochastic" data-ng-model="config.game.chance">Stochastic</label>
             </div>
             <div class="col-sm-7 form-control-static">
                 does my wheel slip because the dirt isn't solid (ice physics)
