rough cut: separate socket, add config

--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -92,6 +92,17 @@
                 how many rooms are in the cave? (defaults to a minimum of 4)
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Player</label>
+
+            <div class="col-sm-3 radio form-control-static">
+                <label><input type="radio" value="person" data-ng-model="config.game.player">Person</label>
+                <label><input type="radio" value="lemon" data-ng-model="config.game.player">Lemon</label>
+            </div>
+            <div class="col-sm-7 form-control-static">
+                who is playing the game? a person or the lm?
+            </div>
+        </div>
 
     </div>
 </div>
