--- a/use/client/partials/wumpus/instance.html
+++ b/use/client/partials/wumpus/instance.html
@@ -6,6 +6,9 @@
     <div class="alert end-message" data-ng-if="game.cave.agent.win || !game.cave.agent.alive"
          data-ng-class="{'alert-success': game.cave.agent.win, 'alert-danger': !game.cave.agent.win}"></div>
 </div>
+
+<div data-wumpus-socket data-ng-if="config.game.player==='lemon'"></div>
+
 <div class="game-container">
     <!-- room needs to be ng-show, otherwise the watches don't work -->
     <span data-ng-repeat="room in game.cave.rooms" data-wumpus-room="room" data-ng-show="room.visible"></span>
