--- a/use/client/partials/wumpus/socket.html
+++ b/use/client/partials/wumpus/socket.html
@@ -1,1 +1,2 @@
-<input type="text" />
+<input class="form-control" type="text" data-ng-model="message" data-ng-keyup="keyup($event)"/>
+<textarea class="form-control" readonly></textarea>
