--- a/use/client/partials/wumpus/socket.html
+++ b/use/client/partials/wumpus/socket.html
@@ -1,2 +1,2 @@
 <input class="form-control" type="text" data-ng-model="message" data-ng-keyup="keyup($event)"/>
-<textarea class="form-control" readonly></textarea>
+<textarea class="form-control" data-ng-model="serverMessage" readonly></textarea>
