second pass: example graph

--- a/use/client/index.css
+++ b/use/client/index.css
@@ -61,3 +61,18 @@
   position: absolute;
   border-top: solid black 1px;
 }
+
+
+/*
+ * subgraph
+ */
+
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
