display contexts on the ui! first pass :D
it's so coool

--- a/use/client/partials/wumpus/app.html
+++ b/use/client/partials/wumpus/app.html
@@ -2,3 +2,5 @@
 
 <div data-ng-if="state==='config'" data-ng-include="'partials/wumpus/config.html'"></div>
 <div data-ng-if="state==='instance'" data-wumpus-instance></div>
+
+<div data-ng-repeat="d in contexts" data-render-subgraph="d"></div>
