--- a/use/client/partials/wumpus/app.html
+++ b/use/client/partials/wumpus/app.html
@@ -3,4 +3,9 @@
 <div data-ng-if="state==='config'" data-ng-include="'partials/wumpus/config.html'"></div>
 <div data-ng-if="state==='instance'" data-wumpus-instance></div>
 
-<div data-ng-repeat="d in contexts" data-render-subgraph="d"></div>
+<table class="table">
+    <tr data-ng-repeat="d in contexts">
+        <td><span title="Remove" data-ng-click="removeContext(d)" class="text-danger glyphicon glyphicon-remove"></span></td>
+        <td data-render-subgraph="d"></td>
+    </tr>
+</table>
