--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -139,9 +139,9 @@
             <label class="col-sm-2 control-label">Pit Probability</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="0" step="0.01" max="1" data-str-to-num data-ng-model="config.pit.probability"/>
+                <input type="range" min="0" step="0.01" max="1" data-str-to-num data-ng-model="config.misc.pit.probability"/>
             </div>
-            <div class="col-sm-1 form-control-static">{{config.pit.probability | number: 2}}</div>
+            <div class="col-sm-1 form-control-static">{{config.misc.pit.probability | number: 2}}</div>
             <div class="col-sm-6 form-control-static">
                 Used when generating a new map.
                 Once the objects have been placed (exit/wumpus/gold), how likely is it for pits to appear?
